--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -7,15 +7,20 @@ machine:
     cpu:
       cpu_type: "arm926"
       n_cpus: 1
-    interrupt_controller:
-      ic_name: "mv88f5181L_ic"
-      b_fiqs: 8
-      icr_size: "0x100"
-      n_irqs: 32
-      l_irqs:
-        - 32
-      i_irqs:
-        - 0
+    peripheral:
+      peripheral_name: "mv88f5181L_peripherals"
+      peripheral_ram_size: "0x10000000"
+      interrupt_controller:
+        ic_name: "mv88f5181L_ic"
+        b_fiqs: 8
+        icr_size: "0x100"
+        n_irqs: 32
+        l_irqs:
+          - 32
+        i_irqs:
+          - 0
+      gpio:
+        gpio_name: "mv88f5181L_gpio"
   ram:
     ram_size: "1 * GiB"
   boot_device:
