--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -1,4 +1,5 @@
 machine:
+  license: "/* \n * automatically generated, don't change\n */"
   machine_desc: "Linksys WRT350N v2 (MV88F5181L)"
   machine_name: "wrt350n_v2"
   board_id: "0x661"
@@ -13,22 +14,20 @@ machine:
       interrupt_controller:
         ic_name: "mv88f5181L_ic"
         b_fiqs: 8
-        icr_size: "0x100"
+        ic_ram_size: "0x100"
         n_irqs: 32
         l_irqs:
           - 32
         i_irqs:
           - 0
-      gpio:
-        gpio_name: "mv88f5181L_gpio"
   ram:
     ram_size: "1 * GiB"
   boot_device:
+    flash_enable: 1
     flash:
-      flash_enable: 1
       flash_addr: "0xf4000000"
       flash_sect_size: "64 * KiB"
       flash_size: "8 * MiB"
+    sd_enable: 0
     sd:
-      sd_enable: 0
       sd_size: ~
