--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -11,6 +11,10 @@ machine:
       peripheral_name: "mv88f5181L_peripherals"
       peripheral_ram_base: "0xfdd00000"
       peripheral_ram_size: "0x10000000"
+      timer:
+        timer_name: "mv8865181L_timer"
+        timer_ram_base: "0x00020300"
+        timer_ram_size: "0x100"
     local_interrupt_controller:
         ic_name: "mv88f5181L_ic"
         ic_ram_base: "0xfdd20200"
