--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -21,7 +21,7 @@ machine:
         uart_ram_size: "0x100"
     local_interrupt_controller:
         ic_name: "mv88f5181L_ic"
-        ic_ram_base: "0xfdd20200"
+        ic_ram_base: "0xf1020200"
         ic_ram_size: "0x100"
         b_fiqs: 8
         n_irqs: 32
