--- a/generation/config.yaml
+++ b/generation/config.yaml
@@ -7,6 +7,7 @@ install:
     peripheral_name: "hw\\arm"
     timer_name: "hw\\timer"
     uart_name: "hw\\char"
+    gpio_name: "hw\\gpio"
   linux:
     root: "/home/liuqiang/qemu-4.0.0"
     machine_name: "hw/arm"
@@ -15,4 +16,5 @@ install:
     peripheral_name: "hw/arm"
     timer_name: "hw/timer"
     uart_name: "hw/char"
+    gpio_name: "hw/gpio"
   include: "include"
