--- a/generation/config.yaml
+++ b/generation/config.yaml
@@ -8,6 +8,7 @@ install:
     timer_name: "hw\\timer"
     uart_name: "hw\\char"
     gpio_name: "hw\\gpio"
+    pcie_name: "hw\\pci-host"
   linux:
     root: "/home/liuqiang/qemu-4.0.0"
     machine_name: "hw/arm"
@@ -17,4 +18,5 @@ install:
     timer_name: "hw/timer"
     uart_name: "hw/char"
     gpio_name: "hw/gpio"
+    pcie_name: "hw/pci-host"
   include: "include"
