--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -10,7 +10,7 @@ machine:
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
       peripheral_ram_base: "0xf1000000"
-      peripheral_ram_size: "0x10000000"
+      peripheral_ram_size: "0x00100000"
       timer:
         timer_name: "mv88f5181L_timer"
         timer_ram_base: "0xf1020300"
@@ -24,6 +24,10 @@ machine:
         gpio_ram_base: "0xf1010100"
         gpio_ram_size: "0x100"
         gpio_n: 32
+      pcie:
+        pcie_name: "mv88f5181L_pcie"
+        pcie_ram_base: "0xf1040000"
+        pcie_ram_size: "0x2000"
     local_interrupt_controller:
         ic_name: "mv88f5181L_ic"
         ic_ram_base: "0xf1020200"
