--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -18,6 +18,21 @@ machine:
         timer_name: "mv88f5181L_timer"
         timer_ram_base: "0xf1020300"
         timer_ram_size: "0x100"
+        timer_registers:
+          - name: "cpu_timers_control_register"
+            offset: "0x00"
+          - name: "cpu_timer0_reload_register"
+            offset: "0x10"
+          - name: "cpu_timer0_register"
+            offset: "0x14"
+          - name: "cpu_timer1_reload_register"
+            offset: "0x18"
+          - name: "cpu_timer1_register"
+            offset: "0x1c"
+          - name: "cpu_watchdog_timer_reload_register"
+            offset: "0x20"
+          - name: "cpu_watchdog_timer_register"
+            offset: "0x20"
       uart:
         uart_name: "mv88f5181L_uart"
         uart_ram_base: "0xf1012000"
