--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -14,6 +14,19 @@ machine:
       bridge_name: "mv88f5181L_bridge"
       bridge_ram_base: "0xf1020100"
       bridge_ram_size: "0x100"
+      bridge_registers:
+        - name: "bridge_configuration_register"
+          offset: "0x00"
+        - name: "bridge_control_and_status_register"
+          offset: "0x04"
+        - name: "bridge_rstoutn_mask_register"
+          offset: "0x08"
+        - name: "bridge_system_soft_reset_register"
+          offset: "0x0c"
+        - name: "bridge_interrupt_cause_register"
+          offset: "0x10"
+        - name: "bridge_interrupt_mask_register"
+          offset: "0x14"
       timer:
         timer_name: "mv88f5181L_timer"
         timer_ram_base: "0xf1020300"
@@ -47,15 +60,15 @@ machine:
         pcie_ram_base: "0xf1040000"
         pcie_ram_size: "0x10000"
     local_interrupt_controller:
-        ic_name: "mv88f5181L_ic"
-        ic_ram_base: "0xf1020200"
-        ic_ram_size: "0x100"
-        b_fiqs: 8
-        n_irqs: 32
-        l_irqs:
-          - 32
-        i_irqs:
-          - 0
+      ic_name: "mv88f5181L_ic"
+      ic_ram_base: "0xf1020200"
+      ic_ram_size: "0x100"
+      b_fiqs: 8
+      n_irqs: 32
+      l_irqs:
+        - 32
+      i_irqs:
+        - 0
   ram:
     ram_size: "32 * MiB"
   boot_device:
