add cpu address map registers

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -7,13 +7,62 @@ machine:
     soc_name: "mv88f5181L"
     cpu:
       cpu_type: "arm926"
+    cpu_address_map:
+      soc_mmio_name: "mv88f5181_cpu_address_map"
+      soc_mmio_base: "0xf1020000"
+      soc_mmio_size: "0x100"
+      soc_registers:
+        - name: "window0_control_register"
+          offset: "0x00"
+        - name: "window0_base_register"
+          offset: "0x04"
+        - name: "window0_remap_low_register"
+          offset: "0x08"
+        - name: "window0_remap_high_register"
+          offset: "0x0C"
+        - name: "window1_control_register"
+          offset: "0x10"
+        - name: "window1_base_register"
+          offset: "0x14"
+        - name: "window1_remap_low_register"
+          offset: "0x18"
+        - name: "window1_remap_high_register"
+          offset: "0x1C"
+        - name: "window2_control_register"
+          offset: "0x20"
+        - name: "window2_base_register"
+          offset: "0x24"
+        - name: "window2_remap_low_register"
+          offset: "0x28"
+        - name: "window2_remap_high_register"
+          offset: "0x2C"
+        - name: "window3_control_register"
+          offset: "0x30"
+        - name: "window3_base_register"
+          offset: "0x34"
+        - name: "window4_control_register"
+          offset: "0x40"
+        - name: "window4_base_register"
+          offset: "0x44"
+        - name: "window5_control_register"
+          offset: "0x50"
+        - name: "window5_base_register"
+          offset: "0x54"
+        - name: "window6_control_register"
+          offset: "0x60"
+        - name: "window6_base_register"
+          offset: "0x64"
+        - name: "window7_control_register"
+          offset: "0x70"
+        - name: "window7_base_register"
+          offset: "0x74"
+        - name: "_88f5181_internal_registers_base_address_register"
+          offset: "0x80"
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
-      peripheral_ram_base: "0xf1000000"
-      peripheral_ram_size: "0x00100000"
-      bridge_name: "mv88f5181L_bridge"
-      bridge_ram_base: "0xf1020100"
-      bridge_ram_size: "0x100"
+      bridge_mmio_name: "mv88f5181_bridge"
+      bridge_mmio_base: "0xf1020100"
+      bridge_mmio_size: "0x100"
       bridge_registers:
         - name: "bridge_configuration_register"
           offset: "0x00"
@@ -29,8 +78,8 @@ machine:
           offset: "0x14"
       timer:
         timer_name: "mv88f5181L_timer"
-        timer_ram_base: "0xf1020300"
-        timer_ram_size: "0x100"
+        timer_mmio_base: "0xf1020300"
+        timer_mmio_size: "0x100"
         timer_registers:
           - name: "cpu_timers_control_register"
             offset: "0x00"
@@ -48,21 +97,21 @@ machine:
             offset: "0x24"
       uart:
         uart_name: "mv88f5181L_uart"
-        uart_ram_base: "0xf1012000"
-        uart_ram_size: "0x100"
+        uart_mmio_base: "0xf1012000"
+        uart_mmio_size: "0x100"
       gpio:
         gpio_name: "mv88f5181L_gpio"
-        gpio_ram_base: "0xf1010100"
-        gpio_ram_size: "0x100"
+        gpio_mmio_base: "0xf1010100"
+        gpio_mmio_size: "0x100"
         gpio_n: 32
       pcie:
         pcie_name: "mv88f5181L_pcie"
-        pcie_ram_base: "0xf1040000"
-        pcie_ram_size: "0x10000"
+        pcie_mmio_base: "0xf1040000"
+        pcie_mmio_size: "0x10000"
     interrupt_controller:
       ic_name: "mv88f5181L_ic"
-      ic_ram_base: "0xf1020200"
-      ic_ram_size: "0x100"
+      ic_mmio_base: "0xf1020200"
+      ic_mmio_size: "0x100"
       ic_registers:
         - name: "main_interrupt_cause_register"
           offset: "0x00"
