add init value for cpu address map registers

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -14,50 +14,73 @@ machine:
       soc_registers:
         - name: "window0_control_register"
           offset: "0x00"
+          value: "0x1FFF5941"
         - name: "window0_base_register"
           offset: "0x04"
+          value: "0x80000000"
         - name: "window0_remap_low_register"
           offset: "0x08"
+          value: "0x80000000"
         - name: "window0_remap_high_register"
           offset: "0x0C"
+          value: "0x0"
         - name: "window1_control_register"
           offset: "0x10"
+          value: "0x1FFF5931"
         - name: "window1_base_register"
           offset: "0x14"
+          value: "0xA0000000"
         - name: "window1_remap_low_register"
           offset: "0x18"
+          value: "0xA0000000"
         - name: "window1_remap_high_register"
           offset: "0x1C"
+          value: "0x0"
         - name: "window2_control_register"
           offset: "0x20"
+          value: "0x00005141"
         - name: "window2_base_register"
           offset: "0x24"
+          value: "0xC0000000"
         - name: "window2_remap_low_register"
           offset: "0x28"
+          value: "0xC0000000"
         - name: "window2_remap_high_register"
           offset: "0x2C"
+          value: "0x0"
         - name: "window3_control_register"
           offset: "0x30"
+          value: "0x00005131"
         - name: "window3_base_register"
           offset: "0x34"
+          value: "0xC8000000"
         - name: "window4_control_register"
           offset: "0x40"
+          value: "0x00000091"
         - name: "window4_base_register"
           offset: "0x44"
+          value: "0xC8010000"
         - name: "window5_control_register"
           offset: "0x50"
+          value: "0x0"
         - name: "window5_base_register"
           offset: "0x54"
+          value: "0x0"
         - name: "window6_control_register"
           offset: "0x60"
+          value: "0x07FF1B11"
         - name: "window6_base_register"
           offset: "0x64"
+          value: "0xF0000000"
         - name: "window7_control_register"
           offset: "0x70"
+          value: "0x07FF0F11"
         - name: "window7_base_register"
           offset: "0x74"
+          value: "0xF8000000"
         - name: "_88f5181_internal_registers_base_address_register"
           offset: "0x80"
+          value: "0xD0000000"
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
       bridge_mmio_name: "mv88f5181_bridge"
