--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -8,10 +8,12 @@ machine:
     cpu:
       cpu_type: "arm926"
     cpu_address_map:
-      soc_mmio_name: "mv88f5181_cpu_address_map"
-      soc_mmio_base: "0xf1020000"
-      soc_mmio_size: "0x100"
-      soc_registers:
+      cam_mmio_name: "mv88f5181_cpu_address_map"
+      cam_mmio_base: "0xf1020000"
+      cam_mmio_size: "0x100"
+      cam_registers:
+        # default value copied from mv88f8182, base and size seems wrong
+        # but it doesn't matter, the kernel will overwrite them all
         - name: "window0_control_register"
           offset: "0x00"
           value: "0x1FFF5941"
@@ -81,6 +83,101 @@ machine:
         - name: "_88f5181_internal_registers_base_address_register"
           offset: "0x80"
           value: "0xD0000000"
+    ddr_sdram_controller:
+      dsc_mmio_name: "mv88f5181_ddr_sdram_controller"
+      dsc_mmio_base: "0xf1001400"
+      dsc_mmio_size: "0x200"
+      dsc_registers:
+        - name: "cs0n_base_address_register"
+          offset: "0x100"
+          value: "0x0 << 0 | 0x0 << 16 | 0x0 << 24"
+        - name: "cs0n_size_register"
+          offset: "0x104"
+          value: "0x1 << 0 | 0x0 << 1 |  0xFF << 16 | 0x0F << 24"
+        - name: "cs1n_base_address_register"
+          offset: "0x108"
+          value: "0x0 << 0 | 0x0 << 16 | 0x10 << 24"
+        - name: "cs1n_size_register"
+          offset: "0x10C"
+          value: "0x1 << 0 | 0x0 << 1 | 0xFF << 16 | 0x0F << 24"
+        - name: "cs2n_base_address_register"
+          offset: "0x110"
+          value: "0x0 << 0 | 0xFF << 16 | 0x20 << 24"
+        - name: "cs2n_size_register"
+          offset: "0x114"
+          value: "0x1 << 0 | 0x0 << 1 | 0xFF << 16 | 0x0F << 24"
+        - name: "cs3n_base_address_register"
+          offset: "0x118"
+          value: "0x0 << 0 | 0x0 << 16 | 0x30 << 24"
+        - name: "cs3n_size_register"
+          offset: "0x11C"
+          value: "0x1 << 0 | 0x0 << 1 | 0xFF << 16 | 0x0F << 24"
+        - name: "ddr_sdram_configuration_register"
+          offset: "0x00"
+          value: "0x400 << 0 | 0x2 << 14 | 0x0 << 17 | 0x1 << 18 | 0x0 << 19 | 0x2 << 20 | 0x0 << 22 | 0x1 << 24 | 0x1 << 25 | 0x0 << 26"
+        - name: "ddr_sdram_control_register"
+          offset: "0x04"
+          value: "0x0 << 0 | 0x1 << 6 | 0x0 << 7 | 0x1 << 12 | 0x0 << 13 | 0x0 << 14 | 0x1 << 18 | 0x0 << 19 | 0x3 << 24 | 0x0 << 28"
+        - name: "ddr_sdram_timing_low_register"
+          offset: "0x08"
+          value: "0x0 << 0 | 0x2 << 4 | 0x2 << 8 | 0x2 << 12 | 0x1 << 16 | 0x8 << 20 | 0x1 << 24 | 0x1 << 28"
+        - name: "ddr_sdram_timing_high_register"
+          offset: "0x0C"
+          value: "0xD << 0 | 0x0 << 4 | 0x0 << 6 | 0x0 << 8 | 0x0 << 10 | 0x0 << 12"
+        - name: "ddr2_sdram_timing_low_register"
+          offset: "0x28"
+          value: "0x5 << 0 | 0x0 << 4 | 0x3 << 8 | 0x3 << 12 | 0x6 << 16 | 0x0 << 20"
+        - name: "ddr2_sdram_timing_high_register"
+          offset: "0x7C"
+          value: "0x0 << 0 | 0x3 << 4 | 0x3 << 8 | 0x6 << 12 | 0x0 << 16"
+        - name: "ddr_sdram_address_control_register"
+          offset: "0x10"
+          value: "0x0 << 0 | 0x1 << 4 | 0x0 << 6"
+        - name: "ddr_sdram_open pages_control_register"
+          offset: "0x14"
+          value: "0x0 << 0 | 0x0 << 1"
+        - name: "ddr_sdram_operation_register"
+          offset: "0x18"
+          value: "0x0 << 0 | 0x0 << 4"
+        - name: "ddr_sdram_operation_control_register"
+          offset: "0x2C"
+          value: "0x0 << 0 | 0x0 << 2"
+        - name: "ddr_sdram_mode_register"
+          offset: "0x1C"
+          value: "0x2 << 0 | 0x0 << 3 | 0x3 << 4 | 0x0 << 7 | 0x0 << 8 | 0x0 << 12 | 0x0 << 13 | 0x0 << 14"
+        - name: "extended_ddr_sdram_mode_register"
+          offset: "0x20"
+          value: "0x0 << 0 | 0x0 << 1 | 0x0 << 7 | 0x0 << 13 | 0x0 << 14"
+        - name: "ddr_sdram_initialization_control_register"
+          offset: "0x80"
+          value: "0x0 << 0 | 0x0 << 1"
+        - name: "ddr_sdram_address_or_control_pads_calibration_register"
+          offset: "0xC0"
+          value: "0x0 << 0 | 0x0 << 6 | 0x0 << 12 | 0x0 << 14 | 0x1 << 16 | 0x0 << 17 | 0x0 << 23 | 0x0 << 29 | 0x0 << 31"
+        - name: "ddr_sdram_data_pads_calibration_register"
+          offset: "0xC4"
+          value: "0x144 << 0"
+        - name: "ddr2_sdram_odt_control_low_register"
+          offset: "0x94"
+          value: "0x0 << 0 | 0x0 << 4 | 0x0 << 8 | 0x0 << 12 | 0x0 << 16 | 0x0 << 20 | 0x0 << 24 | 0x0 << 28"
+        - name: "ddr2_sdram_odt_control_high_register"
+          offset: "0x98"
+          value: "0x0 << 0 | 0x0 << 2 | 0x0 << 4 | 0x0 << 6 | 0x0 << 8"
+        - name: "ddr2_sdram_odt_control_register"
+          offset: "0x9C"
+          value: "0x0 << 0 | 0x0 << 4 | 0x0 << 8 | 0x0 << 10 | 0x0 << 12"
+        - name: "ddr_sdram_interface_mbus_control_low_register"
+          offset: "0x30"
+          value: "0x0 << 0 | 0x1 << 4 | 0x2 << 8 | 0x3 << 12 | 0x4 << 16 | 0x5 << 20 | 0x6 << 24 | 0x7 << 28"
+        - name: "ddr_sdram_interface_mbus_control_high_register"
+          offset: "0x34"
+          value: "0x8 << 0 | 0x9 << 4 | 0xA << 8 | 0xB << 12 | 0xC << 16 | 0xD << 20 | 0xE << 24 | 0xF << 28"
+        - name: "ddr_sdram_interface_mbus_timeout_register"
+          offset: "0x38"
+          value: "0xFF << 0 | 0x0 << 8 | 0x1 << 16 | 0x0 << 17"
+        - name: "ddr_sdram_mmask_register"
+          offset: "0xB0"
+          value: "0x0 << 0 | 0x0 << 2 | 0x0 << 4 | 0xF << 5 | 0x0 << 9"
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
       bridge_mmio_name: "mv88f5181_bridge"
