add Cryptographic Engine and Security Accelerator registers

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -228,6 +228,121 @@ machine:
         pcie_name: "mv88f5181L_pcie"
         pcie_mmio_base: "0xf1040000"
         pcie_mmio_size: "0x10000"
+      cryptographic_engine_and_security_accelerator:
+        cesa_name: "mv88f5181l_cesa"
+        cesa_mmio_base: "0xf109DD00"
+        cesa_mmio_size: "0x200"
+        cesa_registers:
+          - name: "des_data_out_low_register"
+            offset: "0x00000078"
+          - name: "des_data_out_high_register"
+            offset: "0x0000007c"
+          - name: "des_data_buffer_low_register"
+            offset: "0x00000070"
+          - name: "des_data_buffer_high_register"
+            offset: "0x00000074"
+          - name: "des_initial_value_low_register"
+            offset: "0x00000040"
+          - name: "des_initial_value_high_register"
+            offset: "0x00000044"
+          - name: "des_key0_low_register"
+            offset: "0x00000048"
+          - name: "des_key0_high_register"
+            offset: "0x0000004c"
+          - name: "des_key1_low_register"
+            offset: "0x00000050"
+          - name: "des_key1_high_register"
+            offset: "0x00000054"
+          - name: "des_key2_low_register"
+            offset: "0x00000060"
+          - name: "des_key2_high_register"
+            offset: "0x00000064"
+          - name: "des_command_register"
+            offset: "0x00000058"
+          - name: "sha-1_or_md5_data_in_register"
+            offset: "0x00000038"
+          - name: "sha-1_or_md5_bit_count_low_register"
+            offset: "0x00000020"
+          - name: "sha-1_or_md5_bit_count_high_register"
+            offset: "0x00000024"
+          - name: "sha-1_or_md5_initial_value_or_digest_a_register"
+            offset: "0x00000000"
+          - name: "sha-1_or_md5_initial_value_or_digest_b_register"
+            offset: "0x00000004"
+          - name: "sha-1_or_md5_initial_value_or_digest_c_register"
+            offset: "0x00000008"
+          - name: "sha-1_or_md5_initial_value_or_digest_d_register"
+            offset: "0x0000000c"
+          - name: "sha-1_initial_value_or_digest_e_register"
+            offset: "0x00000010"
+          - name: "sha-1_or_md5_authentication_command_register"
+            offset: "0x00000018"
+          - name: "aes_encryption_data_in_or_out_column_3_register"
+            offset: "0x000000a0"
+          - name: "aes_encryption_data_in_or_out_column_2_register"
+            offset: "0x000000a4"
+          - name: "aes_encryption_data_in_or_out_column_1_register"
+            offset: "0x000000a8"
+          - name: "aes_encryption_data_in_or_out_column_0_register"
+            offset: "0x000000ac"
+          - name: "aes_encryption_key_column_3_register"
+            offset: "0x00000090"
+          - name: "aes_encryption_key_column_2_register"
+            offset: "0x00000094"
+          - name: "aes_encryption_key_column_1_register"
+            offset: "0x00000098"
+          - name: "aes_encryption_key_column_0_register"
+            offset: "0x0000009c"
+          - name: "aes_encryption_key_column_7_register"
+            offset: "0x00000080"
+          - name: "aes_encryption_key_column_6_register"
+            offset: "0x00000084"
+          - name: "aes_encryption_key_column_5_register"
+            offset: "0x00000088"
+          - name: "aes_encryption_key_column_4_register"
+            offset: "0x0000008c"
+          - name: "aes_encryption_command_register"
+            offset: "0x000000b0"
+          - name: "aes_decryption_data_in_or_out_column_3_register"
+            offset: "0x000000e0"
+          - name: "aes_decryption_data_in_or_out_column_2_register"
+            offset: "0x000000e4"
+          - name: "aes_decryption_data_in_or_out_column_1_register"
+            offset: "0x000000e8"
+          - name: "aes_decryption_data_in_or_out_column_0_register"
+            offset: "0x000000ec"
+          - name: "aes_decryption_key_column_3_register"
+            offset: "0x000000d0"
+          - name: "aes_decryption_key_column_2_register"
+            offset: "0x000000d4"
+          - name: "aes_decryption_key_column_1_register"
+            offset: "0x000000d8"
+          - name: "aes_decryption_key_column_0_register"
+            offset: "0x000000dc"
+          - name: "aes_decryption_key_column_7_register"
+            offset: "0x000000c0"
+          - name: "aes_decryption_key_column_6_register"
+            offset: "0x000000c4"
+          - name: "aes_decryption_key_column_5_register"
+            offset: "0x000000c8"
+          - name: "aes_decryption_key_column_4_register"
+            offset: "0x000000cc"
+          - name: "aes_decryption_command_register"
+            offset: "0x000000f0"
+          - name: "security_accelerator_command_register"
+            offset: "0x00000100"
+          - name: "security_accelerator_descriptor_pointer_session_0_register"
+            offset: "0x00000104"
+          - name: "security_accelerator_descriptor_pointer_session_1_register"
+            offset: "0x00000114"
+          - name: "security_accelerator_configuration_register"
+            offset: "0x00000108"
+          - name: "security_accelerator_status_register"
+            offset: "0x0000010c"
+          - name: "cryptographic_engines_and_security_accelerator_interrupt_cause_register"
+            offset: "0x00000120"
+          - name: "cryptographic_engines_and_security_accelerator_interrupt_mask_register"
+            offset: "0x00000124"
     interrupt_controller:
       ic_name: "mv88f5181L_ic"
       ic_mmio_base: "0xf1020200"
