add usb contoller registers in machine config

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -369,6 +369,111 @@ machine:
             offset: "0x00000120"
           - name: "cryptographic_engines_and_security_accelerator_interrupt_mask_register"
             offset: "0x00000124"
+    usb_2_0_controller:
+      u2c_name: "mv88f5181_usb_2_0_controller"
+      u2c_mmio_base: "0xf1050000"
+      u2c_mmio_size: "0x500"
+      u2c_registers:
+      - name: "port0_usb_2_0_id"
+        offset: "0x00"
+      - name: "port0_usb_2_0_hwgeneral"
+        offset: "0x04"
+      - name: "port0_usb_2_0_hwhost"
+        offset: "0x08"
+      - name: "port0_usb_2_0_hwdevice"
+        offset: "0x0c"
+      - name: "port0_usb_2_0_hwtxbuf"
+        offset: "0x10"
+      - name: "port0_usb_2_0_hwrxbuf"
+        offset: "0x14"
+      - name: "port0_usb_2_0_hwtttxbuf"
+        offset: "0x18"
+      - name: "port0_usb_2_0_hwttrxbuf"
+        offset: "0x1c"
+      - name: "port0_usb_2_0_caplength"
+        offset: "0x100"
+      - name: "port0_usb_2_0_hciversion"
+        offset: "0x102"
+      - name: "port0_usb_2_0_hcsparams"
+        offset: "0x104"
+      - name: "port0_usb_2_0_hccparams"
+        offset: "0x108"
+      - name: "port0_usb_2_0_dciversion"
+        offset: "0x120"
+      - name: "port0_usb_2_0_dccparams"
+        offset: "0x124"
+      - name: "port0_usb_2_0_usbcmd"
+        offset: "0x140"
+      - name: "port0_usb_2_0_usbsts"
+        offset: "0x144"
+      - name: "port0_usb_2_0_usbintr"
+        offset: "0x148"
+      - name: "port0_usb_2_0_frindex"
+        offset: "0x14c"
+      - name: "port0_usb_2_0_periodiclistbase__or__device_addr"
+        offset: "0x154"
+      - name: "port0_usb_2_0_asynclistaddr__or__endpointlist_addr"
+        offset: "0x158"
+      - name: "port0_usb_2_0_ttctrl"
+        offset: "0x15c"
+      - name: "port0_usb_2_0_burstsize"
+        offset: "0x160"
+      - name: "port0_usb_2_0_txfilltuning"
+        offset: "0x164"
+      - name: "port0_usb_2_0_txttfilltuning"
+        offset: "0x168"
+      - name: "port0_usb_2_0_configflag"
+        offset: "0x180"
+      - name: "port0_usb_2_0_portsc1"
+        offset: "0x184"
+      - name: "port0_usb_2_0_otgsc"
+        offset: "0x1a4"
+      - name: "port0_usb_2_0_usbmode"
+        offset: "0x1a8"
+      - name: "port0_usb_2_0_enpdtsetupstat"
+        offset: "0x1ac"
+      - name: "port0_usb_2_0_endptprime"
+        offset: "0x1b0"
+      - name: "port0_usb_2_0_endptflush"
+        offset: "0x1b4"
+      - name: "port0_usb_2_0_endptstatus"
+        offset: "0x1b8"
+      - name: "port0_usb_2_0_endptcomplete"
+        offset: "0x1bc"
+      - name: "port0_usb_2_0_endptctrl0"
+        offset: "0x1c0"
+      - name: "port0_usb_2_0_endptctrl1"
+        offset: "0x1c4"
+      - name: "port0_usb_2_0_endptctrl2"
+        offset: "0x1c8"
+      - name: "port0_usb_2_0_endptctrl3"
+        offset: "0x1cc"
+      - name: "port0_usb_2_0_bridge_control_register"
+        offset: "0x300"
+      - name: "port0_usb_2_0_bridge_interrupt_cause_register"
+        offset: "0x310"
+      - name: "port0_usb_2_0_bridge_interrupt_mask_register"
+        offset: "0x314"
+      - name: "port0_usb_2_0_bridge_error_address_register"
+        offset: "0x31c"
+      - name: "port0_usb_2_0_window0_control_register"
+        offset: "0x320"
+      - name: "port0_usb_2_0_window0_base_register"
+        offset: "0x324"
+      - name: "port0_usb_2_0_window1_control_register"
+        offset: "0x330"
+      - name: "port0_usb_2_0_window1_base_register"
+        offset: "0x334"
+      - name: "port0_usb_2_0_window2_control_register"
+        offset: "0x340"
+      - name: "port0_usb_2_0_window2_base_register"
+        offset: "0x344"
+      - name: "port0_usb_2_0_window3_control_register"
+        offset: "0x350"
+      - name: "port0_usb_2_0_window3_base_register"
+        offset: "0x354"
+      - name: "port0_usb_2_0_power_control_register"
+        offset: "0x400"
     interrupt_controller:
       ic_name: "mv88f5181L_ic"
       ic_mmio_base: "0xf1020200"
